turtleart.lessons.turtleart.Main.Flower.scala.error
Source:20: error: ')' expected but '<-' found.
for (k <- 0 <- 8) {
            ^Source:28: error: illegal start of simple expression
}
^